--- a/api-express/package.json
+++ b/api-express/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon node_modules/.bin/ts-node src/index.ts",
+    "start": "nodemon src/index.ts",
     "lint:fix": "eslint --fix \"src/**/*\""
   },
   "dependencies": {
