--- a/api-express/package.json
+++ b/api-express/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint --fix \"src/**/*\""
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
