--- a/blockchain-smartcontract/package.json
+++ b/blockchain-smartcontract/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "truffle": "^5.1.2"
+    "truffle": "^5.1.2",
+    "web3": "^1.2.4"
   }
 }
