Fix bugs, Add scripts, Add remaining basic apis

--- a/api-express/package.json
+++ b/api-express/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "ts-node src/index.ts",
+    "start:watch": "nodemon src/index.ts",
     "lint:fix": "eslint --fix \"src/**/*\""
   },
   "dependencies": {
