--- a/api-express/package.json
+++ b/api-express/package.json
@@ -15,7 +15,8 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
@@ -23,6 +24,7 @@
     "@types/node": "^12.7.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
+    "@types/ws": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
     "eslint": "^6.7.1",
